--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=home.html" />
+    <meta http-equiv="refresh" content="0; url=register.html" />
+    <title>Redirecting...</title>
   </head>
   <body>
-    <p>Redirecting...</p>
+    <p>Redirecting to Register Page...</p>
   </body>
 </html>
